@@ -18,7 +18,7 @@
  *
  * The author may be contacted via http://dmalloc.com/
  *
- * $Id: malloc.c,v 1.181 2004/07/10 03:49:52 gray Exp $
+ * $Id: malloc.c,v 1.182 2004/08/13 21:26:27 gray Exp $
  */
 
 /*
@@ -100,7 +100,7 @@
 #if IDENT_WORKS
 #ident "@(#) $Information: lock-threads is enabled $"
 #else
-static char *information = "@(#) $Information: lock-threads is enabled $"
+static char *information = "@(#) $Information: lock-threads is enabled $";
 #endif
 #endif
 
