@@ -1,9 +1,12 @@
 -------------------------------------------------------------------------------
-$Id: NEWS,v 1.116 2004/07/11 03:08:38 gray Exp $
+$Id: NEWS,v 1.117 2004/08/13 21:26:51 gray Exp $
 -------------------------------------------------------------------------------
 
 Version 5.4.0 (07/10/2004):
 
+	* Fixed some missing ; and a int/unsigned-int bug.
+	* Added return.h support for AIX 4.3 RS/6000.
+	* Added backwards compatibility for %d usage in logfile name.
 	* Removed force-linear token because made invalid with mmap addition.
 	* Added mmap usage inside of the library.  Should it be the default?
 	* Internal random algorithm now seeded with fixed value.
